--- a/home-images - 3.html
+++ b/home-images - 3.html
@@ -179,9 +179,9 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/aiData.js"></script>
-    <script src="./js/cloudData.js"></script>
-    <script src="./js/meanData.js"></script>
+    <script src="./data/aiData.js"></script>
+    <script src="./data/cloudData.js"></script>
+    <script src="./data/meanData.js"></script>
     <script src="./js/blog.js"></script>
    
 </body>
